<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CheckoutFragment"
        android:padding="16dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/deliveryAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Delivery Address"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paymentMethodTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryAddressEt"
            android:layout_marginTop="10dp"
            android:text="@string/payment_method_text" />

        <RadioGroup
            android:id="@+id/paymentRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentMethodTV"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_on_delivery_text"
                android:textStyle="bold"
                android:checked="true"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_payment_text"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/next_payment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentRG"
            android:text="@string/next_button_text"
            android:backgroundTint="#ff22"
            android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>