<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CartListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:background="#F6F2F2"
            android:elevation="10dp">

            <TextView
                android:id="@+id/shopping_cart_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Shopping Cart"
                android:text="@string/shopping_cart_title_text"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/cart_total_item_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/shopping_cart_title_tv"
                app:layout_constraintTop_toTopOf="@id/shopping_cart_title_tv"
                tools:text=" 3 Items"
                android:text="@string/cart_total_item_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/purple_200" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="10dp"
            android:background="#F3EBEB">

            <Button
                android:id="@+id/add_more_shopping_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="More Shopping"
                android:textColor="#3F51B5"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:drawableRight="@drawable/ic_baseline_add_circle_outline_24" />

            <TextView
                android:id="@+id/total_amount_level_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/add_more_shopping_btn"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Total"
                android:text="@string/total_tv_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/total_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/total_amount_level_tv"
                app:layout_constraintTop_toBottomOf="@id/total_amount_level_tv"
                tools:text="BDT 605"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#F44336" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/next_steps_layout"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#F44336">

                <TextView
                    android:id="@+id/checkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="checkout"
                    android:text="@string/checkout_tv_text"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:drawablePadding="5dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>